added bootstrap elements and grid to index

--- a/index.html
+++ b/index.html
@@ -7,21 +7,34 @@
 		<link rel="stylesheet" href="style/style.css"/>
 	<head>
 	<body>
-              	
-		<div class="row"> 
-		<div class="col-lg-12 show">
+       	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="skills/index.html">Skills</a>
+        		</div>
+				</div>
+			</div>
+		</nav>
+		<div class="row top-buffer"> 
+		<div class="col-lg-12">
 		<div><h1><center>Dónal Munnelly CV</center></h1></div>
 		<div><h1><center>Security Propositions Manager</center></h1> </div>
         </div>
-		</div>	
-       
+		</div>
+	
     <div class="container">  
 		<div class="row">
-		<div class="col-lg-2 show">
+		<div class="col-lg-2">
 			<div><h2>Photo</h2></div>
 			<img src="images/Donal-Munnelly.png" alt="Dónal Munnelly picture" >
 			 </div>
-		<div class="col-lg-8 show">
+		<div class="col-lg-8">
 			<div><h2>About me</h2></div>
 			<p>	Dónal Munnelly is the Security proposition Manager for BT Ireland he is responsible for developing customer propositions in the area of cybersecurity and ensuring customers reach their strategic goals. Prior to joining BT Dónal has held a number of roles in IT, Sales and Product Management across a number of industries from FMCG to Horse Racing. </p>
 			
@@ -29,24 +42,56 @@
         </div>  
 		 
 		</div>
-	</div>
-			
+	
+		
+		<div class="row top-buffer">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Ransomware costs world economy over €800bn. Here’s how to fight back</h5>
+        <p class="card-text">Dónal Munnelly, security propositions manager at BT Ireland, has some recommendations for how to protect yourself and your business.</p>
+        <a href="https://www.businesspost.ie/commercial-reports/ransomware-costs-world-economy-over-eur800bn-heres-how-to-fight-back-5caf85b9" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Silicon Republic</h5>
+        <p class="card-text">BT’s Dónal Munnelly believes 2021 could mark the end of the ‘castle walls’ approach when it comes to cybersecurity strategies.</p>
+        <a href="https://www.siliconrepublic.com/enterprise/cybersecurity-trends-bt-donal-munnelly" class="btn btn-primary">Cybersecurity Landscape</a>
+      </div>
+    </div>
+  </div>
+</div>
+		<div class="row top-buffer">
+		
+	
+		<div class="col-lg-4">
+		<div><center><h1>Email:</h1></center></div>
+		<div><h3>x21118710@student.ncirl.ie</h3></div>
+		</div>
+		<div class="col-lg-4">
+		<div><h1>Phone:</h1></div>
+		<div><h3>+353 86 1234567</h3></div>
+		</div>
+		<div class="col-lg-4">
+		<div><h1>Social:</h1></div>
+		<div><h3><a href="https://ie.linkedin.com/in/d%C3%B3nal-munnelly-71735610" target="_blank">LinkedIn</a></h3></div>
+		</div>
 		<div class="row">
-		
-	<div class="col-lg-3 show">
-		<div><h1><a href="skills/index.html">Learn More</a></h1></div>
+		<div class="col-lg-4 hide">
+		<div></div>
 		</div>
-		<div class="col-lg-3 show">
-		<div><h3>Email: x21118710@student.ncirl.ie</h3></div>
-		</div>
-		<div class="col-lg-3 show">
-		<div><h3>Phone: +353 86 1234567</h3></div>
-		</div>
-		<div class="col-lg-3 show">
-		<div></div><h3><a href="https://ie.linkedin.com/in/d%C3%B3nal-munnelly-71735610" target="_blank">Connect with me on LinkedIn</a></h3></div>
-		</div>
+			<div class="col-lg-4 ">
+			<div><h1>Cybersecurity Trends</h1></div>
+		<div class="ratio ratio-4x3">
 		
-		
-		
+  <iframe src="https://www.youtube.com/embed/hty3kuP73kg" title="Cybersecurity Trends" allowfullscreen></iframe>
+</div>
+</div>
+
+</div>
+        </div>
 	</body>
 </html>
