--- a/skills/index.html
+++ b/skills/index.html
@@ -10,13 +10,13 @@
 	<body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">Menu</a>
+    <a class="navbar-brand" href="/">Menu</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
         <a class="nav-link" href="#">Skills</a>
         		</div>
 				</div>
