redo of old version pathing incorrect

--- a/skills/index.html
+++ b/skills/index.html
@@ -16,7 +16,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link active" aria-current="page" href="/">Home</a>
+        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
         <a class="nav-link" href="#">Skills</a>
         		</div>
 				</div>
